cfn_benchmark/cfn_templates/Tianyi2__IRIS/data/cloudformation_collected_templates_new/template_09355_253278820.yaml
Resources:
  FoldingAtHomeFoldingClusterF51462E9:
    Type: AWS::ECS::Cluster
    Metadata:
      aws:cdk:path: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/Resource
  FoldingAtHomeFoldingClusterVpc56D3C5DE:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/Vpc
    Metadata:
      aws:cdk:path: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/Vpc/Resource
  FoldingAtHomeFoldingClusterVpcPublicSubnet1SubnetF78C1BB4:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/18
      VpcId:
        Ref: FoldingAtHomeFoldingClusterVpc56D3C5DE
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/Vpc/PublicSubnet1
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
    Metadata:
      aws:cdk:path: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/Vpc/PublicSubnet1/Subnet
  FoldingAtHomeFoldingClusterVpcPublicSubnet1RouteTableE844C66D:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: FoldingAtHomeFoldingClusterVpc56D3C5DE
      Tags:
        - Key: Name
          Value: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/Vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/Vpc/PublicSubnet1/RouteTable
  FoldingAtHomeFoldingClusterVpcPublicSubnet1RouteTableAssociationA1B0B2DA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: FoldingAtHomeFoldingClusterVpcPublicSubnet1RouteTableE844C66D
      SubnetId:
        Ref: FoldingAtHomeFoldingClusterVpcPublicSubnet1SubnetF78C1BB4
    Metadata:
      aws:cdk:path: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/Vpc/PublicSubnet1/RouteTableAssociation
  FoldingAtHomeFoldingClusterVpcPublicSubnet1DefaultRoute93824276:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: FoldingAtHomeFoldingClusterVpcPublicSubnet1RouteTableE844C66D
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: FoldingAtHomeFoldingClusterVpcIGW918CF8CE
    DependsOn:
      - FoldingAtHomeFoldingClusterVpcVPCGWA75648BC
    Metadata:
      aws:cdk:path: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/Vpc/PublicSubnet1/DefaultRoute
  FoldingAtHomeFoldingClusterVpcPublicSubnet1EIP54AFC469:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/Vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/Vpc/PublicSubnet1/EIP
  FoldingAtHomeFoldingClusterVpcPublicSubnet1NATGateway7AB2E7DA:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - FoldingAtHomeFoldingClusterVpcPublicSubnet1EIP54AFC469
          - AllocationId
      SubnetId:
        Ref: FoldingAtHomeFoldingClusterVpcPublicSubnet1SubnetF78C1BB4
      Tags:
        - Key: Name
          Value: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/Vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/Vpc/PublicSubnet1/NATGateway
  FoldingAtHomeFoldingClusterVpcPublicSubnet2Subnet0E9261B1:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.64.0/18
      VpcId:
        Ref: FoldingAtHomeFoldingClusterVpc56D3C5DE
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/Vpc/PublicSubnet2
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
    Metadata:
      aws:cdk:path: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/Vpc/PublicSubnet2/Subnet
  FoldingAtHomeFoldingClusterVpcPublicSubnet2RouteTable9ED1CCA9:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: FoldingAtHomeFoldingClusterVpc56D3C5DE
      Tags:
        - Key: Name
          Value: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/Vpc/PublicSubnet2
    Metadata:
      aws:cdk:path: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/Vpc/PublicSubnet2/RouteTable
  FoldingAtHomeFoldingClusterVpcPublicSubnet2RouteTableAssociation8BBFFBDF:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: FoldingAtHomeFoldingClusterVpcPublicSubnet2RouteTable9ED1CCA9
      SubnetId:
        Ref: FoldingAtHomeFoldingClusterVpcPublicSubnet2Subnet0E9261B1
    Metadata:
      aws:cdk:path: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/Vpc/PublicSubnet2/RouteTableAssociation
  FoldingAtHomeFoldingClusterVpcPublicSubnet2DefaultRoute85165E68:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: FoldingAtHomeFoldingClusterVpcPublicSubnet2RouteTable9ED1CCA9
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: FoldingAtHomeFoldingClusterVpcIGW918CF8CE
    DependsOn:
      - FoldingAtHomeFoldingClusterVpcVPCGWA75648BC
    Metadata:
      aws:cdk:path: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/Vpc/PublicSubnet2/DefaultRoute
  FoldingAtHomeFoldingClusterVpcPublicSubnet2EIPFB30D0AD:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/Vpc/PublicSubnet2
    Metadata:
      aws:cdk:path: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/Vpc/PublicSubnet2/EIP
  FoldingAtHomeFoldingClusterVpcPublicSubnet2NATGateway2F410822:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - FoldingAtHomeFoldingClusterVpcPublicSubnet2EIPFB30D0AD
          - AllocationId
      SubnetId:
        Ref: FoldingAtHomeFoldingClusterVpcPublicSubnet2Subnet0E9261B1
      Tags:
        - Key: Name
          Value: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/Vpc/PublicSubnet2
    Metadata:
      aws:cdk:path: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/Vpc/PublicSubnet2/NATGateway
  FoldingAtHomeFoldingClusterVpcPrivateSubnet1SubnetEE7837B5:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.128.0/18
      VpcId:
        Ref: FoldingAtHomeFoldingClusterVpc56D3C5DE
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/Vpc/PrivateSubnet1
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
    Metadata:
      aws:cdk:path: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/Vpc/PrivateSubnet1/Subnet
  FoldingAtHomeFoldingClusterVpcPrivateSubnet1RouteTable900CEA3C:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: FoldingAtHomeFoldingClusterVpc56D3C5DE
      Tags:
        - Key: Name
          Value: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/Vpc/PrivateSubnet1
    Metadata:
      aws:cdk:path: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/Vpc/PrivateSubnet1/RouteTable
  FoldingAtHomeFoldingClusterVpcPrivateSubnet1RouteTableAssociation7E084D5C:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: FoldingAtHomeFoldingClusterVpcPrivateSubnet1RouteTable900CEA3C
      SubnetId:
        Ref: FoldingAtHomeFoldingClusterVpcPrivateSubnet1SubnetEE7837B5
    Metadata:
      aws:cdk:path: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/Vpc/PrivateSubnet1/RouteTableAssociation
  FoldingAtHomeFoldingClusterVpcPrivateSubnet1DefaultRoute6FDCEE54:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: FoldingAtHomeFoldingClusterVpcPrivateSubnet1RouteTable900CEA3C
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: FoldingAtHomeFoldingClusterVpcPublicSubnet1NATGateway7AB2E7DA
    Metadata:
      aws:cdk:path: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/Vpc/PrivateSubnet1/DefaultRoute
  FoldingAtHomeFoldingClusterVpcPrivateSubnet2SubnetF4983DDF:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.192.0/18
      VpcId:
        Ref: FoldingAtHomeFoldingClusterVpc56D3C5DE
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/Vpc/PrivateSubnet2
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
    Metadata:
      aws:cdk:path: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/Vpc/PrivateSubnet2/Subnet
  FoldingAtHomeFoldingClusterVpcPrivateSubnet2RouteTable1BC9B2D8:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: FoldingAtHomeFoldingClusterVpc56D3C5DE
      Tags:
        - Key: Name
          Value: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/Vpc/PrivateSubnet2
    Metadata:
      aws:cdk:path: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/Vpc/PrivateSubnet2/RouteTable
  FoldingAtHomeFoldingClusterVpcPrivateSubnet2RouteTableAssociationC7DBA256:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: FoldingAtHomeFoldingClusterVpcPrivateSubnet2RouteTable1BC9B2D8
      SubnetId:
        Ref: FoldingAtHomeFoldingClusterVpcPrivateSubnet2SubnetF4983DDF
    Metadata:
      aws:cdk:path: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/Vpc/PrivateSubnet2/RouteTableAssociation
  FoldingAtHomeFoldingClusterVpcPrivateSubnet2DefaultRouteC0798B56:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: FoldingAtHomeFoldingClusterVpcPrivateSubnet2RouteTable1BC9B2D8
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: FoldingAtHomeFoldingClusterVpcPublicSubnet2NATGateway2F410822
    Metadata:
      aws:cdk:path: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/Vpc/PrivateSubnet2/DefaultRoute
  FoldingAtHomeFoldingClusterVpcIGW918CF8CE:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/Vpc
    Metadata:
      aws:cdk:path: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/Vpc/IGW
  FoldingAtHomeFoldingClusterVpcVPCGWA75648BC:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: FoldingAtHomeFoldingClusterVpc56D3C5DE
      InternetGatewayId:
        Ref: FoldingAtHomeFoldingClusterVpcIGW918CF8CE
    Metadata:
      aws:cdk:path: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/Vpc/VPCGW
  FoldingAtHomeFoldingClusterDefaultAutoScalingGroupInstanceSecurityGroupFD0C3A2A:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/DefaultAutoScalingGroup/InstanceSecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      Tags:
        - Key: Name
          Value: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/DefaultAutoScalingGroup
      VpcId:
        Ref: FoldingAtHomeFoldingClusterVpc56D3C5DE
    Metadata:
      aws:cdk:path: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/DefaultAutoScalingGroup/InstanceSecurityGroup/Resource
  FoldingAtHomeFoldingClusterDefaultAutoScalingGroupInstanceRoleFEC59A89:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service:
                Fn::Join:
                  - ""
                  - - ec2.
                    - Ref: AWS::URLSuffix
        Version: "2012-10-17"
      Tags:
        - Key: Name
          Value: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/DefaultAutoScalingGroup
    Metadata:
      aws:cdk:path: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/DefaultAutoScalingGroup/InstanceRole/Resource
  FoldingAtHomeFoldingClusterDefaultAutoScalingGroupInstanceRoleDefaultPolicy22C4860F:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - ecs:CreateCluster
              - ecs:DeregisterContainerInstance
              - ecs:DiscoverPollEndpoint
              - ecs:Poll
              - ecs:RegisterContainerInstance
              - ecs:StartTelemetrySession
              - ecs:Submit*
              - ecr:GetAuthorizationToken
              - logs:CreateLogStream
              - logs:PutLogEvents
            Effect: Allow
            Resource: "*"
        Version: "2012-10-17"
      PolicyName: FoldingAtHomeFoldingClusterDefaultAutoScalingGroupInstanceRoleDefaultPolicy22C4860F
      Roles:
        - Ref: FoldingAtHomeFoldingClusterDefaultAutoScalingGroupInstanceRoleFEC59A89
    Metadata:
      aws:cdk:path: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/DefaultAutoScalingGroup/InstanceRole/DefaultPolicy/Resource
  FoldingAtHomeFoldingClusterDefaultAutoScalingGroupInstanceProfile24A8DC11:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - Ref: FoldingAtHomeFoldingClusterDefaultAutoScalingGroupInstanceRoleFEC59A89
    Metadata:
      aws:cdk:path: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/DefaultAutoScalingGroup/InstanceProfile
  FoldingAtHomeFoldingClusterDefaultAutoScalingGroupLaunchConfigE5A08A16:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      ImageId:
        Ref: SsmParameterValueawsserviceecsoptimizedamiamazonlinux2gpurecommendedimageidC96584B6F00A464EAD1953AFF4B05118Parameter
      InstanceType: g4dn.xlarge
      IamInstanceProfile:
        Ref: FoldingAtHomeFoldingClusterDefaultAutoScalingGroupInstanceProfile24A8DC11
      SecurityGroups:
        - Fn::GetAtt:
            - FoldingAtHomeFoldingClusterDefaultAutoScalingGroupInstanceSecurityGroupFD0C3A2A
            - GroupId
      SpotPrice: "0.52"
      UserData:
        Fn::Base64:
          Fn::Join:
            - ""
            - - |-
                #!/bin/bash
                echo ECS_CLUSTER=
              - Ref: FoldingAtHomeFoldingClusterF51462E9
              - |-2
                 >> /etc/ecs/ecs.config
                sudo iptables --insert FORWARD 1 --in-interface docker+ --destination 169.254.169.254/32 --jump DROP
                sudo service iptables save
                echo ECS_AWSVPC_BLOCK_IMDS=true >> /etc/ecs/ecs.config
    DependsOn:
      - FoldingAtHomeFoldingClusterDefaultAutoScalingGroupInstanceRoleDefaultPolicy22C4860F
      - FoldingAtHomeFoldingClusterDefaultAutoScalingGroupInstanceRoleFEC59A89
    Metadata:
      aws:cdk:path: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/DefaultAutoScalingGroup/LaunchConfig
  FoldingAtHomeFoldingClusterDefaultAutoScalingGroupASGD620505A:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      MaxSize: "3"
      MinSize: "3"
      LaunchConfigurationName:
        Ref: FoldingAtHomeFoldingClusterDefaultAutoScalingGroupLaunchConfigE5A08A16
      Tags:
        - Key: Name
          PropagateAtLaunch: true
          Value: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/DefaultAutoScalingGroup
      VPCZoneIdentifier:
        - Ref: FoldingAtHomeFoldingClusterVpcPrivateSubnet1SubnetEE7837B5
        - Ref: FoldingAtHomeFoldingClusterVpcPrivateSubnet2SubnetF4983DDF
    UpdatePolicy:
      AutoScalingReplacingUpdate:
        WillReplace: true
      AutoScalingScheduledAction:
        IgnoreUnmodifiedGroupSizeProperties: true
    Metadata:
      aws:cdk:path: FoldingOnEcsStack/FoldingAtHome/FoldingCluster/DefaultAutoScalingGroup/ASG
  FoldingAtHomeFoldingAtHomeTaskTaskRole3D480D90:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: FoldingOnEcsStack/FoldingAtHome/FoldingAtHomeTask/TaskRole/Resource
  FoldingAtHomeFoldingAtHomeTask25A79D87:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - Essential: true
          Image: raykrueger/folding-at-home
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: FoldingAtHomemainLogGroup93ED62D3
              awslogs-stream-prefix: folding
              awslogs-region:
                Ref: AWS::Region
          Memory: 8192
          Name: main
          ResourceRequirements:
            - Type: GPU
              Value: "1"
      ExecutionRoleArn:
        Fn::GetAtt:
          - FoldingAtHomeFoldingAtHomeTaskExecutionRole7101A915
          - Arn
      Family: FoldingOnEcsStackFoldingAtHomeFoldingAtHomeTaskBD4B5739
      NetworkMode: bridge
      RequiresCompatibilities:
        - EC2
      TaskRoleArn:
        Fn::GetAtt:
          - FoldingAtHomeFoldingAtHomeTaskTaskRole3D480D90
          - Arn
    Metadata:
      aws:cdk:path: FoldingOnEcsStack/FoldingAtHome/FoldingAtHomeTask/Resource
  FoldingAtHomeFoldingAtHomeTaskExecutionRole7101A915:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: FoldingOnEcsStack/FoldingAtHome/FoldingAtHomeTask/ExecutionRole/Resource
  FoldingAtHomeFoldingAtHomeTaskExecutionRoleDefaultPolicy5F1FF2F3:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - logs:CreateLogStream
              - logs:PutLogEvents
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - FoldingAtHomemainLogGroup93ED62D3
                - Arn
        Version: "2012-10-17"
      PolicyName: FoldingAtHomeFoldingAtHomeTaskExecutionRoleDefaultPolicy5F1FF2F3
      Roles:
        - Ref: FoldingAtHomeFoldingAtHomeTaskExecutionRole7101A915
    Metadata:
      aws:cdk:path: FoldingOnEcsStack/FoldingAtHome/FoldingAtHomeTask/ExecutionRole/DefaultPolicy/Resource
  FoldingAtHomemainLogGroup93ED62D3:
    Type: AWS::Logs::LogGroup
    Properties:
      RetentionInDays: 7
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: FoldingOnEcsStack/FoldingAtHome/main/LogGroup/Resource
  FoldingAtHomeFoldingServiceD6A4B13A:
    Type: AWS::ECS::Service
    Properties:
      Cluster:
        Ref: FoldingAtHomeFoldingClusterF51462E9
      DeploymentConfiguration:
        MaximumPercent: 100
        MinimumHealthyPercent: 0
      EnableECSManagedTags: false
      LaunchType: EC2
      SchedulingStrategy: DAEMON
      TaskDefinition:
        Ref: FoldingAtHomeFoldingAtHomeTask25A79D87
    Metadata:
      aws:cdk:path: FoldingOnEcsStack/FoldingAtHome/FoldingService/Service
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Modules: aws-cdk=2.113.0,@aws-cdk/assets=1.30.0,@aws-cdk/aws-applicationautoscaling=1.30.0,@aws-cdk/aws-autoscaling=1.30.0,@aws-cdk/aws-autoscaling-common=1.30.0,@aws-cdk/aws-autoscaling-hooktargets=1.30.0,@aws-cdk/aws-cloudwatch=1.30.0,@aws-cdk/aws-ec2=1.30.0,@aws-cdk/aws-ecr=1.30.0,@aws-cdk/aws-ecr-assets=1.30.0,@aws-cdk/aws-ecs=1.30.0,@aws-cdk/aws-elasticloadbalancingv2=1.30.0,@aws-cdk/aws-events=1.30.0,@aws-cdk/aws-iam=1.30.0,@aws-cdk/aws-kms=1.30.0,@aws-cdk/aws-lambda=1.30.0,@aws-cdk/ [...]
    Condition: CDKMetadataAvailable
Parameters:
  SsmParameterValueawsserviceecsoptimizedamiamazonlinux2gpurecommendedimageidC96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ecs/optimized-ami/amazon-linux-2/gpu/recommended/image_id
Conditions:
  CDKMetadataAvailable:
    Fn::Or:
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - af-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-northwest-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-3
          - Fn::Equals:
              - Ref: AWS::Region
              - il-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - me-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - me-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - sa-east-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-2
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-2
